Added support for a json callback.  just add ?callback=foo to any .json url.

--- a/app/views/parse/index.json.erb
+++ b/app/views/parse/index.json.erb
@@ -1,1 +1,5 @@
-<%= @feed.to_json %>
+<% if params[:callback] %>
+  <%= params[:callback] %>(<%= @feed.to_json %>)
+<% else %>
+  <%= @feed.to_json %>
+<% end %>
