structure search result json in the same way as regular feeds.

--- a/app/views/search/index.json.erb
+++ b/app/views/search/index.json.erb
@@ -1,5 +1,5 @@
 <% if params[:callback] %>
-  <%= params[:callback] %>(<%= "[#{@posts.collect(&:to_json).join(',')}]" %>)
+  <%= params[:callback] %>(<%= "{\"comments\":[#{@posts.collect(&:to_json).join(',')}]}" %>)
 <% else %>
-  <%= "[#{@posts.collect(&:to_json).join(',')}]" %>
+  <%= "{\"comments\":[#{@posts.collect(&:to_json).join(',')}]}" %>
 <% end %>
