fix broken messages json rendering tempalte

--- a/app/views/messages/index.json.erb
+++ b/app/views/messages/index.json.erb
@@ -1,1 +1,1 @@
-<%= json_callback { :user => @username, :messages => @messages } %>
+<%= json_callback :user => @username, :messages => @messages %>
